fix for StackOverflowError when using class heirarchy extending GrailsSeleniumTestCase - good spot Jerome

--- a/test/projects/selenium-test/web-app/css/main.css
+++ b/test/projects/selenium-test/web-app/css/main.css
@@ -16,6 +16,9 @@ body {
     color: #333;
     font: 11px verdana, arial, helvetica, sans-serif;
 }
+img {
+	border: 0;
+}
 #grailsLogo {
 	padding:20px;
 }
